feat(*) - improve layout of the website

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Get in Touch</h2>
-                    <h3 class="section-subheading text-muted">We would love to help you out!</h3>
+                    <h3 class="section-subheading text-muted">We can take your ideas to life in 10 weeks!</h3>
                 </div>
                 <div class="col-lg-12 text-center">
                     <a class="contact-email" href="mailto:hello@sarayulabs.com">hello@sarayulabs.com</a>
