--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,9 +48,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">We are a techonology consultancy which helps firms grow!</div>
                 <div class="intro-heading">> Sarayu Labs _</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell us about your project</a>
+                <div class="intro-lead-in">We are a technology consultancy helping businesses grow and establish their online presence !</div>
+                <a href="#contact" class="page-scroll btn btn-xl">Tell us about your project</a>
             </div>
         </div>
     </header>
