--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,33 +4,33 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">We are perfectionists.</h3>
+                    <h3 class="section-subheading text-muted">Our custom development capabilities mean that we can develop bespoke solutions for you that can solve your problems.</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Development</h4>
-                    <p class="text-muted">We craft beatiful and fast websites.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Devops</h4>
-                    <p class="text-muted">We take of your infrastructure.</p>
+                    <h4 class="service-heading">Website Development</h4>
+                    <p class="text-muted">We build scalabale and maintainable websites and APIs. Our web team builds elegant responsive websites that work across desktop and mobile. We develop bespoke backends for web and mobile using Django, Python, Postgres and other modern tools.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web security</h4>
-                    <p class="text-muted">We worry about the security of your website so you don't have to</p>
+                    <h4 class="service-heading">Mobile App Development</h4>
+                    <p class="text-muted">We write beautiful and robust native mobile applications. We can help you improve your mobile app or help you get one on the playstore. We will be with you through the entire journey of designing a great UX experience for your users to taking it live.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Web Scalability</h4>
+                    <p class="text-muted">We can help you in transforming your infrastructure to a highly available, reliable and secure setup. We would work with you to first create a detailed analysis of your infrastructure, identify the holes and opportunities for improvement and take it from there.</p>
                 </div>
             </div>
         </div>
