--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Sky is out limit.</h3>
+                    <h3 class="section-subheading text-muted">We are a group of people with expertise in web and machine learning. All of us have been part of high growth startups and are obsessively focussed on satisfying customers. We relentlessly focus on creating beautiful and functional products that solve real problems and scale as your userbase grows.</h3>
                 </div>
             </div>
             <div class="row">
@@ -16,11 +16,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2020</h4>
+                                    <h4>2019</h4>
                                     <h4 class="subheading">Our Humble Beginning</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Two old friends get together to form a software agency. One has deep expertise in web application development while the other partner is an NLP researcher!</p>
+                                    <p class="text-muted">A few people with deep expertise in building scalable Web and ML applications get together with a vision to help other firms grow and build products that their customers will love.</p>
                                 </div>
                             </div>
                         </li>
