feat(*) - copy changes

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Website Development</h4>
+                    <h4 class="service-heading">Web Applications</h4>
                     <p class="text-muted">We build scalabale and maintainable websites and APIs. Our web team builds elegant responsive websites that work across desktop and mobile. We develop bespoke backends for web and mobile using Django, Python, Postgres and other modern tools.</p>
                 </div>
                 <div class="col-md-4">
@@ -21,7 +21,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Mobile App Development</h4>
+                    <h4 class="service-heading">Go Mobile</h4>
                     <p class="text-muted">We write beautiful and robust native mobile applications. We can help you improve your mobile app or help you get one on the playstore. We will be with you through the entire journey of designing a great UX experience for your users to taking it live.</p>
                 </div>
                 <div class="col-md-4">
@@ -29,7 +29,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Scalability</h4>
+                    <h4 class="service-heading">Help you Scale</h4>
                     <p class="text-muted">We can help you in transforming your infrastructure to a highly available, reliable and secure setup. We would work with you to first create a detailed analysis of your infrastructure, identify the holes and opportunities for improvement and take it from there.</p>
                 </div>
             </div>
