--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">> Sarayu Labs _</div>
-                <div class="intro-lead-in">We are a technology consultancy helping businesses grow and establish their online presence !</div>
+                <div class="intro-lead-in">We are a technology consultancy helping businesses build products that scale !</div>
                 <a href="#contact" class="page-scroll btn btn-xl">Tell us about your project</a>
             </div>
         </div>
