--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">We are a group of people with expertise in web and machine learning. All of us have been part of high growth startups and are obsessively focussed on satisfying customers. We relentlessly focus on creating beautiful and functional products that solve real problems and scale as your userbase grows.</h3>
+                    <h3 class="section-subheading text-muted">We are a group of people with deep expertise in building web, ai and machine learning applications. All of us have been part of high growth startups and are obsessively focussed on satisfying customers. We relentlessly focus on creating beautiful and functional products that solve real problems and scale as your userbase grows.</h3>
                 </div>
             </div>
             <div class="row">
