first pass at making text responsive

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -124,7 +124,7 @@ fieldset[disabled] .btn-primary.active {
     border-radius: 8px;
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
-    font-size: 18px;
+    font-size: 2vw;
     font-weight: 700;
     background-color: transparent;
 }
@@ -291,7 +291,7 @@ header .intro-text {
 header .intro-text .intro-lead-in {
     margin-bottom: 55px;
     font-family: {{ site.data.template.font.secondary }};
-    font-size: 22px;
+    font-size: 3vw;
     /*font-style: italic;*/
     line-height: 22px;
 }
@@ -300,7 +300,7 @@ header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
-    font-size: 50px;
+    font-size: 6vw;
     font-weight: 700;
     line-height: 50px;
 }
@@ -314,7 +314,7 @@ header .intro-text .intro-heading {
     header .intro-text .intro-lead-in {
         margin-bottom: 25px;
         font-family: {{ site.data.template.font.secondary }};
-        font-size: 40px;
+        font-size: 3vw;
         /*font-style: italic;*/
         line-height: 40px;
     }
@@ -323,7 +323,7 @@ header .intro-text .intro-heading {
         margin-bottom: 50px;
         text-transform: uppercase;
         font-family: {{ site.data.template.font.primary }};
-        font-size: 75px;
+        font-size: 6vw;
         font-weight: 700;
         line-height: 75px;
     }
