fix - font size for contact section

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -671,7 +671,7 @@ section#contact {
 
 section#contact .contact-email {
     color: #fff;
-    font-size: 40px
+    font-size: 5vw
 }
 
 section#contact .section-heading {
